Added Breadcrumbs and Pagination
First version for both

--- a/atoms/breadcrumbs/breadcrumbs.html
+++ b/atoms/breadcrumbs/breadcrumbs.html
@@ -18,44 +18,31 @@
     })(window,document,'script','dataLayer','GTM-5W57LD3');</script>
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
-    <title>Atoms | Delta Design System</title>
+    <title>Breadcrumbs | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="57x57" href="../assets/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../assets/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../assets/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../assets/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../assets/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../assets/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../assets/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../assets/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="../assets/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../assets/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="../assets/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="../../assets/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../../assets/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../../assets/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../assets/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../../assets/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../../assets/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../../assets/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../../assets/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../../assets/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../../assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/icons/favicon-16x16.png">
+    <link rel="manifest" href="../../assets/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#eeeeee">
-    <meta name="msapplication-TileImage" content="../assets/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="../../assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#eeeeee">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
-    <link href="../css/master.css" rel="stylesheet">
-    <style>
-      @media (min-width: 48rem) {
-        .card-group {
-          justify-content: flex-start;
-          width: calc(100% + 2rem);
-          margin: 0 -1rem;
-        }
-        .card-group .card {
-          width: calc(33% - 2rem);
-          margin: 1rem;
-        }
-      }
-    </style>
+    <link href="../../css/master.css" rel="stylesheet">
     <!-- JSON-LD markup -->
     <script type="application/ld+json">
     {
@@ -83,7 +70,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="logo">
-        <a href="../index.html">
+        <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
         </a>
       </div>
@@ -93,71 +80,45 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
         <ul id="header-navigation">
-          <li><a href="../about/about.html">About</a></li>
-          <li>Atoms</li>
-          <li><a href="../molecules/molecules.html">Molecules</a></li>
-          <li><a href="../organisms/organisms.html">Organisms</a></li>
-          <li><a href="../style/style.html">Style</a></li>
-          <li><a href="../downloads/downloads.html">Downloads</a></li>
+          <li><a href="../../about/about.html">About</a></li>
+          <li><a href="../../atoms/atoms.html">Atoms</a></li>
+          <li><a href="../../molecules/molecules.html">Molecules</a></li>
+          <li><a href="../../organisms/organisms.html">Organisms</a></li>
+          <li><a href="../../style/style.html">Style</a></li>
+          <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="row wide">
-        <h1 class="title">Atoms</h1>
-        <p>If atoms are the basic building blocks of matter, then the atoms of our interfaces serve as the building blocks of our design system.</p>
-        <p><cite><a href="http://atomicdesign.bradfrost.com/chapter-2/#atoms">Atoms</a> from <a href="http://atomicdesign.bradfrost.com/" target="_blank">Atomic Design</a> by <a href="https://bradfrost.com" target="_blank">Brad Frost</a></cite></p>
-      </section>
-      <section class="row wide">
-        <h2>Delta Design System Atoms</h2>
-        <div class="card-group">
-          <div class="card">
-            <div class="text">
-              <h3>Badges</h3>
-              <p class="icon"><a href="badges/badges.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
+        <h1 class="title">Breadcrumbs</h1>
+        <p>Breadcrumb navigation helps the user to understand their location in the website by providing a breadcrumb trail back to the start page.</p>
+        <p>According to the <a href="https://a11y-style-guide.com/style-guide/section-navigation.html#kssref-navigation-breadcrumbs" target="_blank">A11Y Style Guide</a>, breadcrumbs should be placed inside a <code>&lt;nav&gt;</code> tag whenever possible. The markup should include an <code>aria-label=&quot;breadcrumbs&quot;</code> to describe the type of navigation, and you should add <code>aria-current=&quot;page&quot;</code> to the link that points to the current page.</p>
+        <h2>Breadcrumb Structure</h2>
+        <p>In addition to using a <code>&lt;nav&gt;</code> tag with breadcrumbs, we also create these lists with an ordered list (<code>&lt;ol&gt;</code>) as is appropriate.</p>
+        <div class="row fifty">
+          <div class="column">
+            <nav class="breadcrumbs" aria-label="breadcrumbs" style="padding: 0;">
+              <ol>
+                <li><a href="#!">Home</a></li>
+                <li><a href="#!">Category</a></li>
+                <li><a href="#!">Sub-Category</a></li>
+                <li aria-current="page">Product</li>
+              </ol>
+            </nav>
           </div>
-          <div class="card">
-            <div class="text">
-              <h3>Blockquotes</h3>
-              <p class="icon"><a href="blockquotes/blockquotes.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <h3>Breadcrumbs</h3>
-              <p class="icon"><a href="breadcrumbs/breadcrumbs.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <h3>Buttons</h3>
-              <p class="icon"><a href="buttons/buttons.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <h3>Chips</h3>
-              <p class="icon"><a href="chips/chips.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <h3>Feedback</h3>
-              <p class="icon"><a href="feedback/feedback.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <h3>Images</h3>
-              <p class="icon"><a href="images/images.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="text">
-              <h3>Pagination</h3>
-              <p class="icon"><a href="pagination/pagination.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-            </div>
+          <div class="column">
+            <figure>
+              <figcaption>html</figcaption>
+<pre><code>&lt;nav class=&quot;breadcrumbs&quot; aria-label=&quot;breadcrumbs&quot;&gt;
+  &lt;ol&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Category&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;Sub-Category&lt;/a&gt;&lt;/li&gt;
+    &lt;li aria-current=&quot;page&quot;&gt;Product&lt;/li&gt;
+  &lt;/ol&gt;
+&lt;/nav&gt;</code></pre>
+            </figure>
           </div>
         </div>
       </section>
@@ -165,12 +126,12 @@
     <footer>
       <nav aria-labelledby="footer-navigation">
         <ul id="footer-navigation">
-          <li><a href="../about/about.html">About</a></li>
-          <li>Atoms</li>
-          <li><a href="../molecules/molecules.html">Molecules</a></li>
-          <li><a href="../organisms/organisms.html">Organisms</a></li>
-          <li><a href="../style/style.html">Style</a></li>
-          <li><a href="../downloads/downloads.html">Downloads</a></li>
+          <li><a href="../../about/about.html">About</a></li>
+          <li><a href="../../atoms/atoms.html">Atoms</a></li>
+          <li><a href="../../molecules/molecules.html">Molecules</a></li>
+          <li><a href="../../organisms/organisms.html">Organisms</a></li>
+          <li><a href="../../style/style.html">Style</a></li>
+          <li><a href="../../downloads/downloads.html">Downloads</a></li>
         </ul>
       </nav>
       <section class="brand-content">
@@ -196,7 +157,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="../assets/scripts/site.js"></script>
+    <script src="../../assets/scripts/site.js"></script>
     <script>
       AOS.init({duration: 600});
     </script>
