--- a/organisms/tabs/tabs.html
+++ b/organisms/tabs/tabs.html
@@ -123,7 +123,41 @@
             <p>After Apollo 17, America stopped looking towards the next horizon. The United States had become a space-faring nation, but threw it away. We have sacrificed space exploration for space exploitation, which is interesting but scarcely visionary.</p>
           </div>
         </div>
-      </div>      
+      </div>
+      <section class="row wide">
+        <figure>
+          <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;tabs&quot;&gt;
+  &lt;div role=&quot;tablist&quot; aria-multiselectable=&quot;false&quot;&gt;
+    &lt;ul&gt;
+      &lt;li class=&quot;tab-item&quot; role=&quot;presentation&quot;&gt;
+        &lt;button class=&quot;tab-trigger is-active&quot; id=&quot;tab-label-1&quot; role=&quot;tab&quot; aria-controls=&quot;tab-panel-1&quot; aria-selected=&quot;true&quot;&gt;Tab 1&lt;/button&gt;
+      &lt;/li&gt;
+      &lt;li class=&quot;tab-item&quot; role=&quot;presentation&quot;&gt;
+        &lt;button class=&quot;tab-trigger&quot; id=&quot;tab-label-2&quot; role=&quot;tab&quot; aria-controls=&quot;tab-panel-2&quot; aria-selected=&quot;false&quot;&gt;Tab 2&lt;/button&gt;
+      &lt;/li&gt;
+      &lt;li class=&quot;tab-item&quot; role=&quot;presentation&quot;&gt;
+        &lt;button class=&quot;tab-trigger&quot; id=&quot;tab-label-3&quot; role=&quot;tab&quot; aria-controls=&quot;tab-panel-3&quot; aria-selected=&quot;false&quot;&gt;Tab 3&lt;/button&gt;
+      &lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;panels&quot;&gt;
+    &lt;div class=&quot;panel is-current&quot; id=&quot;tab-panel-1&quot; role=&quot;tabpanel&quot; aria-labelledby=&quot;tab-label-1&quot; aria-hidden=&quot;false&quot;&gt;
+      &lt;h3&gt;Tab 1&lt;/h3&gt;
+      &lt;p&gt;The important achievement of Apollo was demonstrating that humanity is not forever chained to this planet and our visions go rather further than that and our opportunities are unlimited.&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;panel&quot; id=&quot;tab-panel-2&quot; role=&quot;tabpanel&quot; aria-labelledby=&quot;tab-label-2&quot; aria-hidden=&quot;true&quot;&gt;
+      &lt;h3&gt;Tab 2&lt;/h3&gt;
+      &lt;p&gt;Never limit yourself because of others' limited imagination; never limit others because of your own limited imagination.&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;div class=&quot;panel&quot; id=&quot;tab-panel-3&quot; role=&quot;tabpanel&quot; aria-labelledby=&quot;tab-label-3&quot; aria-hidden=&quot;true&quot;&gt;
+      &lt;h3&gt;Tab 3&lt;/h3&gt;
+      &lt;p&gt;After Apollo 17, America stopped looking towards the next horizon. The United States had become a space-faring nation, but threw it away. We have sacrificed space exploration for space exploitation, which is interesting but scarcely visionary.&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+        </figure>
+      </section>
     </main>
     <footer>
       <nav aria-labelledby="footer-navigation">
