--- a/organisms/gallery-grid/gallery-grid.html
+++ b/organisms/gallery-grid/gallery-grid.html
@@ -101,22 +101,24 @@
         </ul>
         <p>We're continuing to work on an option that would enable you to wrap gallery grids so there is no overflow off the screen.</p>
       </section>
-      <section class="gallery-grid">
-        <h2 style="padding: 2rem 0 0 2rem;">Gallery Grid Example</h2>
-        <ul class="">
-          <li><a href="#!"><img src="../../assets/images/bratislava-2x.jpg" srcset="../../assets/images/bratislava-1x.jpg 1x, ../../assets/images/bratislava-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
-          <li><a href="#!"><img src="../../assets/images/bridge-2x.jpg" srcset="../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
-          <li class="double"><a href="#!"><img src="../../assets/images/building-2x.jpg" srcset="../../assets/images/building-1x.jpg 1x, ../../assets/images/building-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
-          <li><a href="#!"><img src="../../assets/images/field-2x.jpg" srcset="../../assets/images/field-1x.jpg 1x, ../../assets/images/field-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
-          <li class="double"><a href="#!"><img src="../../assets/images/london-2x.jpg" srcset="../../assets/images/london-1x.jpg 1x, ../../assets/images/london-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
-          <li><a href="#!"><img src="../../assets/images/boston-2x.jpg" srcset="../../assets/images/boston-1x.jpg 1x, ../../assets/images/boston-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
-        </ul>
+      <section class="row">
+        <h2>Gallery Grid Example</h2>
+        <div class="gallery-grid">
+          <ul>
+            <li><a href="#!"><img src="../../assets/images/bratislava-2x.jpg" srcset="../../assets/images/bratislava-1x.jpg 1x, ../../assets/images/bratislava-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
+            <li><a href="#!"><img src="../../assets/images/bridge-2x.jpg" srcset="../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
+            <li class="double"><a href="#!"><img src="../../assets/images/building-2x.jpg" srcset="../../assets/images/building-1x.jpg 1x, ../../assets/images/building-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
+            <li><a href="#!"><img src="../../assets/images/field-2x.jpg" srcset="../../assets/images/field-1x.jpg 1x, ../../assets/images/field-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
+            <li class="double"><a href="#!"><img src="../../assets/images/london-2x.jpg" srcset="../../assets/images/london-1x.jpg 1x, ../../assets/images/london-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
+            <li><a href="#!"><img src="../../assets/images/boston-2x.jpg" srcset="../../assets/images/boston-1x.jpg 1x, ../../assets/images/boston-2x.jpg 2x" alt="Example of image used in gallery grid layout"></a></li>
+          </ul>
+        </div>
       </section>
       <section class="row wide">
         <h2 class="visuallyhidden">Gallery Grid Example Code</h2>
         <figure>
           <figcaption>html</figcaption>
-<pre><code>&lt;section class=&quot;gallery-grid&quot;&gt;
+<pre><code>&lt;div class=&quot;gallery-grid&quot;&gt;
   &lt;ul&gt;
     &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;&lt;img src=&quot;../../assets/images/bratislava-2x.jpg&quot; srcset=&quot;../../assets/images/bratislava-1x.jpg 1x, ../../assets/images/bratislava-2x.jpg 2x&quot; alt=&quot;Example of image used in gallery grid layout&quot;&gt;&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;&lt;img src=&quot;../../assets/images/bridge-2x.jpg&quot; srcset=&quot;../../assets/images/bridge-1x.jpg 1x, ../../assets/images/bridge-2x.jpg 2x&quot; alt=&quot;Example of image used in gallery grid layout&quot;&gt;&lt;/a&gt;&lt;/li&gt;
@@ -125,7 +127,7 @@
     &lt;li class=&quot;double&quot;&gt;&lt;a href=&quot;#!&quot;&gt;&lt;img src=&quot;../../assets/images/london-2x.jpg&quot; srcset=&quot;../../assets/images/london-1x.jpg 1x, ../../assets/images/london-2x.jpg 2x&quot; alt=&quot;Example of image used in gallery grid layout&quot;&gt;&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href=&quot;#!&quot;&gt;&lt;img src=&quot;../../assets/images/boston-2x.jpg&quot; srcset=&quot;../../assets/images/boston-1x.jpg 1x, ../../assets/images/boston-2x.jpg 2x&quot; alt=&quot;Example of image used in gallery grid layout&quot;&gt;&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
-&lt;/section&gt;</code></pre>
+&lt;/div&gt;</code></pre>
         </figure>
       </section>
     </main>
