--- a/molecules/molecules.html
+++ b/molecules/molecules.html
@@ -119,6 +119,12 @@
           </div>
           <div class="card">
             <div class="text">
+              <h3>Breadcrumbs</h3>
+              <p class="icon"><a href="breadcrumbs/breadcrumbs.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
               <h3>Cards</h3>
               <p class="icon"><a href="cards/cards.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
@@ -139,6 +145,12 @@
             <div class="text">
               <h3>Messages</h3>
               <p class="icon"><a href="messages/messages.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="text">
+              <h3>Pagination</h3>
+              <p class="icon"><a href="pagination/pagination.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
           <div class="card">
