--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         align-items: center;
         padding: 1rem;
       }
-      .intro .action a, .intro .action a:hover, .intro .action a:focus {text-decoration: none;}
+      .intro .action span.button a {color: #ffffff;}
+      .intro .action span.button a, .intro .action span.button a:hover, .intro .action span.button a:focus {text-decoration: none;}
+      .intro .action span.button a:hover, .intro .action span.button a:focus {color: #df3a32;}
       .intro .action p {line-height: 1;}
       .intro .links {
         display: flex;
@@ -145,6 +147,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <div class="logo">
         <a href="index.html">
@@ -176,7 +181,7 @@
           <p class="center">An open-source design system that can be used to build responsive sites, apps, and prototypes quickly.</p>
         </div>
         <div class="action row wide">
-          <a href="https://github.com/cdfournier/delta-design-system/archive/master.zip"><span class="button">Download</span></a>
+          <a href="https://github.com/cdfournier/delta-design-system/archive/master.zip" class="button">Download</a>
           <p class="center"><small>Version 2.3. Code licensed <a href="https://github.com/cdfournier/delta-design-system/blob/master/LICENSE" target="_blank">MIT</a>.</small></p>
           <div class="links">
             <a class="github" href="https://github.com/cdfournier/delta-design-system" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10z"/></svg></a>
@@ -184,7 +189,7 @@
           </div>
         </div>
       </section>
-      <section class="row wide about">
+      <section class="row wide about" id="content">
         <h2 class="center">Meet the Delta Design System</h2>
         <p>I create handcrafted, responsive websites and applications, and I frequently find myself reusing my own code. So I decided to turn my work into an open source framework that makes it easy to design responsive websites, apps, and prototypes with code that is semantic, flexible, customizable, and wicked efficient.</p>
         <p class="icon" style="width: 8rem;"><a href="about/about.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
