--- a/molecules/messages/messages.html
+++ b/molecules/messages/messages.html
@@ -70,7 +70,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <aside class="message">
       <h1>Push Down Headline</h1>
-      <p>Push Down molecules literally push the rest of the page down off the screen once the window is done loading.</p>
+      <p>Push Down messages literally push the rest of the page down the screen once the window is done loading. The content is still there, and users can still scroll to it, but this component provide a bold opportunity to message users.</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="close"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
     </aside>
     <header>
@@ -201,7 +201,7 @@
         <div class="row fifty">
           <div class="column">
             <h3>Push Down Messages</h3>
-            <p>Push Down molecules literally push the rest of the page down off the screen once the window is done loading.</p>
+            <p>Push Down messages literally push the rest of the page down the screen once the window is done loading.</p>
             <button type="button" class="show-push-down">Show Push Down</button>
           </div>
           <div class="column">
